# black-os

./: Cargo.toml  README.md
.cargo/: config
src/: lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  panic_handler.rs
